--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="menu">
-    </nav>
-    <script src="main.js"></script>
+    <div class="container">
+        <div class="box">
+            <div class="box-picture">
+                <img src="./img/Hinh-ve-2-chu-meo-con.jpg" alt="">
+            </div>
+            <div class="box-login">
+                <div class="login">
+                    <div class="title">
+                        <h1>login</h1>
+                    </div>
+                    <div class="main-login">
+                        <input type="text" placeholder="Username" class="btnA">
+                        <input type="password" placeholder="password" class="btnA">
+                        <div class="checkbox">
+                            <input type="checkbox">
+                            <span>remember me</span>
+                        </div>
+                        <div class="button">
+                            <button class="btnB">Login</button>
+                        </div>
+                        <div class="foget-password">
+                            <a href=""><p>Forget password ?</p></a>
+                        </div>
+                    </div>
+                    <div class="footer">
+                        <span>Don't have an acccount ? <a href="">Sign up</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
